# pydog_ws

./: .gitignore  LICENSE  README.md
src/pydog_environment/: CMakeLists.txt  package.xml
src/pydog_environment/exp1/: OccupancyGrid3D.csv  occupancy.yaml
src/pydog_environment/exp1/cad_models/: inlet.STL  outlet.STL  wall1.STL  wall2.STL
src/pydog_environment/exp1/gas_simulations/static/FilamentSimulation_gasType_0_sourcePosition_4.25_1.75_0.75/: iteration_0  iteration_1  iteration_10  iteration_100  iteration_101  iteration_102  iteration_103  iteration_104  iteration_105  iteration_106  iteration_107  iteration_108  iteration_109  iteration_11  iteration_110  iteration_111  iteration_112  iteration_113  iteration_114  iteration_115  iteration_116  iteration_117  iteration_118  iteration_119  iteration_12  iteration_120  iteration_121  (+273 more)
src/pydog_environment/exp1/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
src/pydog_environment/exp1/launch/ros/: stage.world
src/pydog_environment/exp1/wind_simulations/static/: wind_at_cell_centers_0.csv
src/pydog_environment/exp2/: OccupancyGrid3D.csv  occupancy.pgm  occupancy.yaml
src/pydog_environment/exp2/cad_models/: inlet.STL  inner.STL  outlet.STL  wall.STL
src/pydog_environment/exp2/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
src/pydog_environment/exp2/launch/ros/: stage.world
src/pydog_environment/exp2/wind_simulations/static/: wind_at_cell_centers_0.csv_U  wind_at_cell_centers_0.csv_V  wind_at_cell_centers_0.csv_W
(+337 files in other folders)
